[package]
name = "catvec"
version = "0.1.1"
edition = "2018"
authors = ["nullchinchilla <nullchinchilla@pm.me>", "Themelio Labs"]
description="Persistent, catenable vectors"
license = "ISC"
repository="https://github.com/themeliolabs/catvec"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.1"
defmac = "0.2.1"
fastrand = "1.5.0"
log = "0.4.14"
tap = "1.0.1"
arbitrary={version="1", features=["derive"]}

[target.'cfg(fuzzing)'.dependencies] 
honggfuzz= "0.5.54"
env_logger= "0.9"

[dev-dependencies]
env_logger="0.9" 
